--- a/views/partials/navbar-sidebar.html
+++ b/views/partials/navbar-sidebar.html
@@ -2,7 +2,7 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
             <li>
-                <a class="li-nohover"><i class="fa fa-fw"></i></a>
+                <a class="li-nohover" href="#"><i class="fa fa-fw"></i></a>
             </li>
             <li>
                 <a href="/" id="nav_dash"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
